--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hello project</title>
   </head>
   <body>
-    <h1>hello this is a start  project <h4 bgcolor="skyblue">this is actually a time saver</h4></h1>
+    <h1>hello this is a good start up  project <h4 bgcolor="blue">this is actually a time saver</h4></h1>
 
   </body>
 </html>
